[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Enemies/EnemyBase.gd" type="Script" id=1]
[ext_resource path="res://scenes/Enemies/Hurtbox/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/shaders/enemy_hurt.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/color = Color( 0.745098, 0.14902, 0.2, 1 )
shader_param/active = false

[sub_resource type="Animation" id=2]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="EnemyBase" type="KinematicBody2D" groups=[
"EnemyGroup",
]]
collision_layer = 8
collision_mask = 28
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "animate"
anims/animate = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8
collision_mask = 4

[node name="ShaderTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="BulletPosition" type="Position2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="timeout" from="ShaderTimer" to="." method="_on_ShaderTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
